apps/base/observability/loki/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-loki
  namespace: observability
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - loki.svc.server.home
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - loki.svc.server.home
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: loki-tls-secret
