apps/base/observability/loki/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: loki-virtual-service
  namespace: observability
spec:
  hosts:
    - loki.svc.server.home
  gateways:
    - gateway-loki
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: loki-gateway.observability.svc.cluster.local
            port:
              number: 80
